feat: get language for space from space itself
If the language is defined at the space level, then use that language,
otherwise fall back to the settings for the desktop application, or
in the worst case scenario to the default language, which is currently
English.

closes #80

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -5,6 +5,7 @@
     "Saved Spaces": "Espaces Sauvegardés",
     "Spaces Nearby": "Espaces à Proximité",
     "Visit a Space": "Visiter un Espace",
-    "Load": "Charger un Espace"
+    "Load": "Charger un Espace",
+    "Start": "Démarrer"
   }
 }
