--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -5,6 +5,7 @@
     "Saved Spaces": "Saved Spaces",
     "Spaces Nearby": "Spaces Nearby",
     "Visit a Space": "Visit a Space",
-    "Load": "Load"
+    "Load": "Load",
+    "Start": "Start"
   }
 }
