--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -10,6 +10,26 @@
     "Developer": "Developer",
     "Danger Zone! Proceed with caution as changes to this section might lead to data loss.": "Danger Zone! Proceed with caution as changes to this section might lead to data loss.",
     "Manually Edit the Database": "Manually Edit the Database",
-    "Use Sample Database": "Use Sample Database"
+    "Use Sample Database": "Use Sample Database",
+    "Developer Mode": "Developer Mode",
+    "Load a Space": "Load a Space",
+    "View": "View",
+    "Open": "Open",
+    "Browse": "Browse",
+    "Visit": "Visit",
+    "No Spaces Available": "No Spaces Available",
+    "Preview": "Preview",
+    "You are previewing this space. Any input or changes will not be saved.": "You are previewing this space. Any input or changes will not be saved.",
+    "Save this space for offline use.": "Save this space for offline use.",
+    "This space requires an internet connection.": "This space requires an internet connection.",
+    "Delete this space.": "Delete this space.",
+    "Export this space to share with others.": "Export this space to share with others.",
+    "Synchronize this space with its online version. All user input will be deleted.": "Synchronize this space with its online version. All user input will be deleted.",
+    "Delete": "Delete",
+    "Are you sure you want to delete this space?": "Are you sure you want to delete this space?",
+    "Sync": "Sync",
+    "Save As": "Save As",
+    "Cancel": "Cancel",
+    "Are you sure you want to sync this space? All user input will be deleted.": "Are you sure you want to sync this space? All user input will be deleted."
   }
 }
