--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -1,15 +1,35 @@
 {
   "translations": {
-    "Settings": "Réglages",
+    "Settings": "Paramètres",
     "Language": "Langue",
-    "Saved Spaces": "Espaces Sauvegardés",
+    "Saved Spaces": "Espaces Enregistrés",
     "Spaces Nearby": "Espaces à Proximité",
     "Visit a Space": "Visiter un Espace",
-    "Load": "Charger un Espace",
+    "Load": "Charger",
     "Start": "Démarrer",
     "Developer": "Développeur",
-    "Danger Zone! Proceed with caution as changes to this section might lead to data loss.": "Attention ! Les changements que vous faites ici peuvent causer la parte de données.",
+    "Danger Zone! Proceed with caution as changes to this section might lead to data loss.": "Attention ! Les modifications de cette section pourraient entraîner une perte de données.",
     "Manually Edit the Database": "Modifier Manuellement la Base de Données",
-    "Use Sample Database": "Utiliser une Base de Données Exemple"
+    "Use Sample Database": "Utiliser une Base de Données Exemple",
+    "Developer Mode": "Mode Développeur",
+    "Load a Space": "Charger un Espace",
+    "View": "Voir",
+    "Open": "Ouvrir",
+    "Browse": "Parcourir",
+    "Visit": "Visiter",
+    "No Spaces Available": "Aucun Espace Disponible",
+    "Preview": "Tester",
+    "You are previewing this space. Any input or changes will not be saved.": "Vous testez cet espace. Toute entrée ou modification ne sera pas sauvegardée.",
+    "Save this space for offline use.": "Enregistrer cet espace pour une utilisation hors connexion.",
+    "This space requires an internet connection.": "Cet espace nécessite une connexion internet.",
+    "Delete this space.": "Supprimer cet espace.",
+    "Export this space to share with others.": "Exporter cet espace pour le partager.",
+    "Synchronize this space with its online version. All user input will be deleted.": "Synchroniser cet espace avec sa version en ligne. Toute entrée utilisateur sera supprimée.",
+    "Delete": "Supprimer",
+    "Are you sure you want to delete this space?": "Êtes-vous sûr de vouloir supprimer cet espace?",
+    "Sync": "Synchroniser",
+    "Save As": "Enregistrer Sous",
+    "Cancel": "Annuler",
+    "Are you sure you want to sync this space? All user input will be deleted.": "Êtes-vous sur de vouloir synchroniser cet espace? Toute entrée utilisateur sera supprimée."
   }
 }
