feat: activation / deactivation of location sharing
closes #107

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -12,6 +12,8 @@
     "Manually Edit the Database": "Manually Edit the Database",
     "Use Sample Database": "Use Sample Database",
     "Developer Mode": "Developer Mode",
+    "Geolocation Enabled": "Geolocation Enabled",
+    "Enable Geolocation": "Enable Geolocation",
     "Load a Space": "Load a Space",
     "View": "View",
     "Open": "Open",
