feat: create login page
refs #109

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -5,6 +5,8 @@
     "Saved Spaces": "Saved Spaces",
     "Spaces Nearby": "Spaces Nearby",
     "Visit a Space": "Visit a Space",
+    "Login": "Login",
+    "Login with Graasp": "Login with Graasp",
     "Load": "Load",
     "Start": "Start",
     "Developer": "Developer",
