--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -5,6 +5,8 @@
     "Saved Spaces": "Espaces Enregistrés",
     "Spaces Nearby": "Espaces à Proximité",
     "Visit a Space": "Visiter un Espace",
+    "Login": "Se connecter",
+    "Login with Graasp": "Se connecter avec Graasp",
     "Load": "Charger",
     "Start": "Démarrer",
     "Developer": "Développeur",
