feat: register and connect user to an account
redirect to login if user is not logged in

refs #109

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -6,6 +6,7 @@
     "Spaces Nearby": "Espaces à Proximité",
     "Visit a Space": "Visiter un Espace",
     "Login": "Se connecter",
+    "Logout": "Se déconnecter",
     "Login with Graasp": "Se connecter avec Graasp",
     "Load": "Charger",
     "Start": "Démarrer",
