--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -6,6 +6,7 @@
     "Spaces Nearby": "Spaces Nearby",
     "Visit a Space": "Visit a Space",
     "Login": "Login",
+    "Logout": "Logout",
     "Login with Graasp": "Login with Graasp",
     "Load": "Load",
     "Start": "Start",
