fix: fix body from field, fix french translations

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -8,6 +8,8 @@
     "Login": "Login",
     "Logout": "Logout",
     "Login with Graasp": "Login with Graasp",
+    "Username": "Enter your Username",
+    "Password": "Enter your Password",
     "Load": "Load",
     "Start": "Start",
     "Developer": "Developer",
