--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -8,6 +8,8 @@
     "Login": "Se connecter",
     "Logout": "Se déconnecter",
     "Login with Graasp": "Se connecter avec Graasp",
+    "Username": "Entre ton nom d'utilisateur",
+    "Password": "Entre ton mot de passe",
     "Load": "Charger",
     "Start": "Démarrer",
     "Developer": "Développeur",
