refactor: center Visit A Space, add translations for Space Not Found
refs #146

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -5,6 +5,7 @@
     "Saved Spaces": "Saved Spaces",
     "Spaces Nearby": "Spaces Nearby",
     "Visit a Space": "Visit a Space",
+    "Space Not Found": "Space Not Found",
     "Load": "Load",
     "Start": "Start",
     "Developer": "Developer",
@@ -19,6 +20,8 @@
     "Open": "Open",
     "Browse": "Browse",
     "Visit": "Visit",
+    "Visit Another Space": "Visit Another Space",
+    "Home": "Home",
     "No Spaces Available": "No Spaces Available",
     "Preview": "Preview",
     "You are previewing this space. Any input or changes will not be saved.": "You are previewing this space. Any input or changes will not be saved.",
