--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -5,6 +5,7 @@
     "Saved Spaces": "Espaces Enregistrés",
     "Spaces Nearby": "Espaces à Proximité",
     "Visit a Space": "Visiter un Espace",
+    "Space Not Found": "Espace introuvable",
     "Load": "Charger",
     "Start": "Démarrer",
     "Developer": "Développeur",
@@ -19,6 +20,8 @@
     "Open": "Ouvrir",
     "Browse": "Parcourir",
     "Visit": "Visiter",
+    "Visit Another Space": "Visiter un autre Espace",
+    "Home": "Accueil",
     "No Spaces Available": "Aucun Espace Disponible",
     "Preview": "Tester",
     "You are previewing this space. Any input or changes will not be saved.": "Vous testez cet espace. Toute entrée ou modification ne sera pas sauvegardée.",
