refactor: factor out showLoadSpacePrompt listener
Factor out the showLoadSpacePrompt listener to its own file.

refs #104

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -5,6 +5,7 @@
     "Saved Spaces": "Saved Spaces",
     "Spaces Nearby": "Spaces Nearby",
     "Visit a Space": "Visit a Space",
+    "Space Not Found": "Space Not Found",
     "Load": "Load",
     "Start": "Start",
     "Developer": "Developer",
@@ -12,11 +13,15 @@
     "Manually Edit the Database": "Manually Edit the Database",
     "Use Sample Database": "Use Sample Database",
     "Developer Mode": "Developer Mode",
+    "Geolocation Enabled": "Geolocation Enabled",
+    "Enable Geolocation": "Enable Geolocation",
     "Load a Space": "Load a Space",
     "View": "View",
     "Open": "Open",
     "Browse": "Browse",
     "Visit": "Visit",
+    "Visit Another Space": "Visit Another Space",
+    "Home": "Home",
     "No Spaces Available": "No Spaces Available",
     "Preview": "Preview",
     "You are previewing this space. Any input or changes will not be saved.": "You are previewing this space. Any input or changes will not be saved.",
