refactor: use react-countup for action count, add translations in en

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -36,6 +36,12 @@
     "Save As": "Save As",
     "Cancel": "Cancel",
     "Are you sure you want to sync this space? All user input will be deleted.": "Are you sure you want to sync this space? All user input will be deleted.",
-    "You need an internet connection.": "You need an internet connection."
+    "You need an internet connection.": "You need an internet connection.",
+    "Dashboard": "Dashboard",
+    "Action Type Chart": "Action Type Chart",
+    "Total Action Count": "Total Action Count",
+    "Action Count Per Space": "Action Count Per Space",
+    "View Action Database": "View Action Database",
+    "Action Count Per Space": "Action Count Per Space"
   }
 }
