refactor: remove duplicate 'Action Count Per Space' in en.json

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -41,7 +41,6 @@
     "Action Type Chart": "Action Type Chart",
     "Total Action Count": "Total Action Count",
     "Action Count Per Space": "Action Count Per Space",
-    "View Action Database": "View Action Database",
-    "Action Count Per Space": "Action Count Per Space"
+    "View Action Database": "View Action Database"
   }
 }
