refactor: refactor for pull request

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -35,6 +35,7 @@
     "Sync": "Synchroniser",
     "Save As": "Enregistrer Sous",
     "Cancel": "Annuler",
-    "Are you sure you want to sync this space? All user input will be deleted.": "Êtes-vous sûr de vouloir synchroniser cet espace? Toute entrée utilisateur sera supprimée."
+    "Are you sure you want to sync this space? All user input will be deleted.": "Êtes-vous sûr de vouloir synchroniser cet espace? Toute entrée utilisateur sera supprimée.",
+    "You need an internet connection.": "Une connexion internet est requise."
   }
 }
