--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -35,6 +35,7 @@
     "Sync": "Sync",
     "Save As": "Save As",
     "Cancel": "Cancel",
-    "Are you sure you want to sync this space? All user input will be deleted.": "Are you sure you want to sync this space? All user input will be deleted."
+    "Are you sure you want to sync this space? All user input will be deleted.": "Are you sure you want to sync this space? All user input will be deleted.",
+    "You need an internet connection.": "You need an internet connection."
   }
 }
