refactor: remove UserReducer, group settings per user

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -51,7 +51,6 @@
     "Login": "Login",
     "Logout": "Logout",
     "Login with Graasp": "Login with Graasp",
-    "Username": "Enter your Username",
-    "Password": "Enter your Password"
+    "Username": "Enter your Username"
   }
 }
