refactor: fix minor typos

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -42,8 +42,8 @@
     "Total Action Count": "Total Action Count",
     "Action Count Per Space": "Action Count Per Space",
     "Action Database": "Action Database",
-    "No action have been recorded.": "No action have been recorded.",
-    "Action count": "Action count",
+    "No action has been recorded.": "No action has been recorded.",
+    "Action Count": "Action Count",
     "The database is empty.": "The database is empty.",
     "Filter by Space": "Filter by Space",
     "All Spaces": "All Spaces",
