--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -42,8 +42,8 @@
     "Total Action Count": "Nombre total d'actions",
     "Action Count Per Space": "Nombre d'actions par Espace",
     "Action Database": "Base de données des actions",
-    "No action have been recorded.": "Aucune action enregistrée.",
-    "Action count": "Nombre d'actions",
+    "No action has been recorded.": "Aucune action enregistrée.",
+    "Action Count": "Nombre d'actions",
     "The database is empty.": "La base de données est vide.",
     "Filter by Space": "Filtrer par Espace",
     "All Spaces": "Tous les Espaces",
