refactor: apply changes for PR, use id in redux authentication
uniformize space button props

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -51,6 +51,7 @@
     "Sign In": "Sign In",
     "Sign Out": "Sign Out",
     "Username": "Enter your Username",
-    "Sign in as Guest": "Sign in as Guest"
+    "Sign in as Guest": "Sign in as Guest",
+    "Graasp logo": "Graasp logo"
   }
 }
