--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -51,6 +51,7 @@
     "Sign In": "Se connecter",
     "Sign Out": "Se déconnecter",
     "Username": "Entre ton nom d'utilisateur",
-    "Sign in as Guest": "Se connecter en tant qu'invité"
+    "Sign in as Guest": "Se connecter en tant qu'invité",
+    "Graasp logo": "Logo de Graasp"
   }
 }
