feat: display colorful space diff on synchronization

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -56,6 +56,9 @@
     "Accept Synchronization": "Accepter la synchronisation",
     "Current Version": "Version actuelle",
     "Most Recent Online Version": "Version la plus récente",
-    "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.": "Synchronisation d'un Espace en cours. La synchronisation peut être acceptée ou annulée. Si acceptée, la synchronisation est définitive et toute entrée utilisateur sera supprimée."
+    "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.": "Synchronisation d'un Espace en cours. La synchronisation peut être acceptée ou annulée. Si acceptée, la synchronisation est définitive et toute entrée utilisateur sera supprimée.",
+    "Local Space Image": "Image Espace Locale",
+    "Remote Space Image": "Image Espace En Ligne",
+    "No Item to display": "Aucun Element à afficher"
   }
 }
