--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -59,6 +59,8 @@
     "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.": "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.",
     "Local Space Image": "Local Space Image",
     "Remote Space Image": "Remote Space Image",
-    "No Item to Display": "No Item to Display"
+    "No Item to Display": "No Item to Display",
+    "Add this Space to your Favorite Spaces": "Add this Space to your Favorite Spaces",
+    "Favorite Spaces": "Favorite Spaces"
   }
 }
