--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -59,6 +59,8 @@
     "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.": "Synchronisation d'un Espace en cours. La synchronisation peut être acceptée ou annulée. Si acceptée, la synchronisation est définitive et toute entrée utilisateur sera supprimée.",
     "Local Space Image": "Image Espace Locale",
     "Remote Space Image": "Image Espace En Ligne",
-    "No Item to Display": "Aucun Element à Afficher"
+    "No Item to Display": "Aucun Element à Afficher",
+    "Add this Space to your Favorite Spaces": "Add this Space to your Favorite Spaces",
+    "Favorite Spaces": "Espaces Favoris"
   }
 }
