refactor: include visual and advanced sync mode, update tests
unit test for utils/syncSpace, enum for SYNC_CHANGES

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -59,6 +59,6 @@
     "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.": "You are currently synchronizing a space. Either accept or cancel the synchronization. The synchronization is definitive and all user input will be deleted.",
     "Local Space Image": "Local Space Image",
     "Remote Space Image": "Remote Space Image",
-    "No Item to display": "No Item to display"
+    "No Item to Display": "No Item to Display"
   }
 }
