feat: add user functionalities in classroom (add, delete, edit)

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -50,7 +50,7 @@
     "Time": "Time",
     "Sign In": "Sign In",
     "Sign Out": "Sign Out",
-    "Username": "Enter your Username",
+    "Enter your Username": "Enter your Username",
     "Sign in as Guest": "Sign in as Guest",
     "Graasp logo": "Graasp logo",
     "Accept Synchronization": "Accept Synchronization",
