--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -50,7 +50,7 @@
     "Time": "Ligne du temps",
     "Sign In": "Se connecter",
     "Sign Out": "Se déconnecter",
-    "Username": "Entre ton nom d'utilisateur",
+    "Enter your Username": "Entre ton nom d'utilisateur",
     "Sign in as Guest": "Se connecter en tant qu'invité",
     "Graasp logo": "Logo de Graasp",
     "Accept Synchronization": "Accepter la synchronisation",
