refactor: add translations

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -95,6 +95,21 @@
     "add classroom": "ajouter une classe",
     "New Classroom": "Nouvelle Classe",
     "No Classroom Available": "Aucune Classe Disponible",
-    "Classrooms": "Classes"
+    "Classrooms": "Classes",
+    "Edit": "Modifier",
+    "Username": "Nom d'utilisateur",
+    "Import Data": "Importer des données",
+    "Add a student in this classroom.": "Ajouter un utilisateur dans cette classe.",
+    "Enter a name for a new student": "Enter un nom pour un nouvel étudiant",
+    "Student's name": "Nom d'utilisateur",
+    "sorted ascending": "trié par ordre croissant",
+    "sorted descending": "trié par ordre décroissant",
+    "Select all": "Tout sélectioner",
+    "Operations": "Opérations",
+    "Delete this user.": "Supprimer cet utilisateur.",
+    "Classroom not found": "Classe introuvable",
+    "selected": "sélectioné",
+    "Username is not valid.": "Le nom d'utilisateur n'est pas valide.",
+    "Rows per page": "Lignes par page"
   }
 }
