refactor: add translations for user filter in dashboard

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -47,6 +47,7 @@
     "The database is empty.": "The database is empty.",
     "Filter by Space": "Filter by Space",
     "All Spaces": "All Spaces",
+    "All Users": "All Users",
     "Time": "Time",
     "Sign In": "Sign In",
     "Sign Out": "Sign Out",
