--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -47,6 +47,7 @@
     "The database is empty.": "La base de données est vide.",
     "Filter by Space": "Filtrer par Espace",
     "All Spaces": "Tous les Espaces",
+    "All Users": "All Users",
     "Time": "Ligne du temps",
     "Sign In": "Se connecter",
     "Sign Out": "Se déconnecter",
