fix: fix database typo in user filter, fr translation

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -47,7 +47,7 @@
     "The database is empty.": "La base de données est vide.",
     "Filter by Space": "Filtrer par Espace",
     "All Spaces": "Tous les Espaces",
-    "All Users": "All Users",
+    "All Users": "Tous les Utilisateurs",
     "Time": "Ligne du temps",
     "Sign In": "Se connecter",
     "Sign Out": "Se déconnecter",
