--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -137,6 +137,11 @@
     "Sync Advanced Mode": "Mode de Synchronisation Avancé",
     "Student Mode Enabled": "Mode Étudiant Activé",
     "Are you sure you want to clear all of the user input in this space?": "Êtes-vous sûr de vouloir supprimer toutes les entrées utilisateur de cet espace ?",
-    "Clear": "Effacer"
+    "Clear": "Effacer",
+    "User input was successfully cleared.": "Les entrées utilisateur ont été correctement effacées.",
+    "Space was deleted successfully": "L'espace a été supprimé avec succès",
+    "A space with the same id is already available": "Un espace avec le même identifiant existe déjà",
+    "This Space is already up to date": "Cet espace est déjà à jour",
+    "Space was saved successfully": "L'espace a été correctement sauvegardé"
   }
 }
