--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -141,6 +141,10 @@
     "Space was deleted successfully": "Space was deleted successfully",
     "A space with the same id is already available": "A space with the same id is already available",
     "This Space is already up to date": "This Space is already up to date",
-    "Space was saved successfully": "Space was saved successfully"
+    "Space was saved successfully": "Space was saved successfully",
+    "Connection Status": "Connection Status",
+    "You are offline.": "You are offline.",
+    "You are online.": "You are online.",
+    "Tools": "Tools"
   }
 }
