fix: translations for sign in as guest

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -52,7 +52,7 @@
     "Sign In": "Sign In",
     "Sign Out": "Sign Out",
     "Enter your Username": "Enter your Username",
-    "Sign in as Guest": "Sign in as Guest",
+    "Sign In as Guest": "Sign in as Guest",
     "Graasp logo": "Graasp logo",
     "Accept Synchronization": "Accept Synchronization",
     "Current Version": "Current Version",
