--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -52,7 +52,7 @@
     "Sign In": "Se connecter",
     "Sign Out": "Se déconnecter",
     "Enter your Username": "Entre ton nom d'utilisateur",
-    "Sign in as Guest": "Se connecter en tant qu'invité",
+    "Sign In as Guest": "Se connecter en tant qu'invité",
     "Graasp logo": "Logo de Graasp",
     "Accept Synchronization": "Accepter la synchronisation",
     "Current Version": "Version actuelle",
